--- a/dshop/templates/theme/default/pages/accueil.html
+++ b/dshop/templates/theme/default/pages/accueil.html
@@ -1,11 +1,28 @@
 {% extends "theme/default/pages/base.html" %}
-{% load static thumbnail cms_tags i18n sekizai_tags dshop_tags %}
+{% load static thumbnail cms_tags i18n sekizai_tags dshop_tags dmadvertising_tags %}
 
 {% block title %}{% page_attribute "page_title" %}{% endblock %}
 {% block meta-description %}{% page_attribute "meta_description" %}{% endblock %}
 
 {% block content %}
 
-  {% placeholder 'Contenu' %}
+    {% placeholder 'Contenu' %}
+
+    {% get_advertisingpopup as popups %}
+    {% for popup in popups %}
+        {% thumbnail popup.image "800x600" as thumb %}
+        <div id="dmadvertising-popup">
+            {% if popup.link %}
+                <a href="{{ popup.link }}">
+            {% endif %}
+            <div class="dm-wrapper" style="background-image:url('{{ thumb.url }}')">
+                {{ popup.title }}
+            </div>
+            {% if popup.link %}
+                </a>
+            {% endif %}
+            <a href="#" class="dm-close" onclick="dmClosePopup({{ popup.id }}, {% if popup.close_30days %}1{% else %}0{% endif %})">{% trans "Close" %}</a>
+        </div>
+    {% endfor %}
 
 {% endblock content %}
