fix updated class name to id

--- a/dshop/static/theme/default/css/style.css
+++ b/dshop/static/theme/default/css/style.css
@@ -61,10 +61,10 @@ a:hover{
   color:#fff;
   opacity:1;
 }
-.dm-drawer-inner .drawer-items-list .col-8 a{
+.dm-drawer-inner #drawer-items-list .col-8 a{
   color:#458d91;
 }
-.dm-drawer-inner .drawer-items-list .col-8 a:hover{
+.dm-drawer-inner #drawer-items-list .col-8 a:hover{
   color:#202325;
 }
 .dm-drawer-total{
@@ -73,14 +73,14 @@ a:hover{
   color:#458d91;
 }
 @media (max-width: 967px) {
-    .dm-drawer-inner .drawer-items-list .col-3,
-    .dm-drawer-inner .drawer-items-list .col-8 {
+    .dm-drawer-inner #drawer-items-list .col-3,
+    .dm-drawer-inner #drawer-items-list .col-8 {
         padding: 0 5px;
     }
-    .dm-drawer-inner .drawer-items-list .col-8 a {
+    .dm-drawer-inner #drawer-items-list .col-8 a {
         font-size: 0.9rem;
     }
-    .dm-drawer-inner .drawer-items-list a.dm-item-delete {
+    .dm-drawer-inner #drawer-items-list a.dm-item-delete {
         right: -24px;
     }
     .dm-drawer-total {
