--- a/apps/dmAdminTheme/static/dmAdminTheme/css/admin.css
+++ b/apps/dmAdminTheme/static/dmAdminTheme/css/admin.css
@@ -83,60 +83,13 @@ a.section:visited {
     color: #666;
     transition: color 0.3s;
 }
-
-/**/
+/* ===--- Content Related: Module/Section ---=== */
 #content-related .module h2 {
     color: #666;
     font-size: 12px;
     letter-spacing: 0.5px;
     text-transform: uppercase;
     transition: color 0.3s;
-}
-
-/* ===--- CSS Martin ---=== */
-.dashboard #content {
-    width: 800px;
-}
-#content-related {
-    width: 400px;
-    border-top: 30px solid black;
-    margin-right: -420px;
-}
-#header {
-    background-color: black;
-}
-#content-related h3 {
-    font-size: 18px;
-    font-weight: normal;
-    color: #447e9b;
-}
-#branding h1 {
-    color: white;
-}
-#branding h1, #branding h1 a:link, #branding h1 a:visited {
-    color: white;
-}
-.module h2, .module caption, .inline-group h2 {
-    background: black;
-}
-div.breadcrumbs {
-    background-color: grey;
-}
-.button.default, input[type=submit].default, .submit-row input.default {
-    background-color: black;
-}
-.parler-language-tabs span.current {
-    background-color: black;
-    border-color: black;
-}
-.parler-language-tabs {
-    border-bottom: 2px solid black;
-}
-.button, input[type=submit], input[type=button], .submit-row input, a.button {
-    background-color: black;
-}
-.button:active, input[type=submit]:active, input[type=button]:active, .button:focus, input[type=submit]:focus, input[type=button]:focus, .button:hover, input[type=submit]:hover, input[type=button]:hover {
-    background-color: grey;
 }
 
 /* ===--- Index: Analyze Block ---=== */
@@ -213,6 +166,7 @@ form .form-row .field-variant_image .filer-dropzone.filer-dropzone-mobile .dz-me
 }
 form .form-row .field-variant_image .filer-dropzone.filer-dropzone-mobile .filerFile {
     top: 8px;
+}
 /* ===--- Changelist ---=== */
 #changelist-filter li.selected {
     border-left-color: #458d91;
