--- a/dshop/templates/theme/default/catalog/product-detail.html
+++ b/dshop/templates/theme/default/catalog/product-detail.html
@@ -19,7 +19,7 @@
                         {% if product.categories.count > 0 %}
                             <div class="breadcrumbs-item">
                             {% for category in product.categories.all %}
-                                <a href="{% page_url 'produits' %}{{category.id}}-{{category.name|slugify}}">{{category.name}}</a>
+                                <a href="{% page_url category.get_absolute_url }{{category.id}}-{{category.name|slugify}}">{{category.name}}</a>
                             {% endfor %}
                             </div>
                         {% endif %}
