--- a/dshop/templates/theme/default/plugins/block-sales-child.html
+++ b/dshop/templates/theme/default/plugins/block-sales-child.html
@@ -1,17 +1,21 @@
 {% load static cms_tags thumbnail %}
 
-<div class="col-12 col-lg-6">
-  <div class="single_banner" style="background-color:{{instance.bg_color}}">
-    {% if instance.image %}
-      {% thumbnail instance.image "540x300" crop upscale as thumb %}
-      <img src="{{thumb.url}}" alt="" />
-    {% else %}
-      <img src="{% static 'dshop/shopwise/images/shop_banner_img1.jpg' %}" alt="" />
-    {% endif %}
-    <div class="single_banner_info" style="{% if instance.text_position == 0 %}left:10px;right:auto;{% else %}left:auto;right:0;{% endif %}">
-      <h5 class="single_bn_title1" style="color:{{instance.txt_color}}">{% if instance.text %}{{instance.text}}{% endif %}</h5>
-      <h3 class="single_bn_title" style="color:{{instance.txt_color}}">{% if instance.title %}{{instance.title}}{% endif %}</h3>
-      {% if instance.btn_label %}<a href="{% if instance.btn_url %}{{instance.btn_url}}{% else %}#{% endif %}" class="single_bn_link" style="color:{{instance.txt_color}}">{{instance.btn_label}}</a>{% endif %}
+<div class="col-12{% if perline == 1 %}{% elif perline == 2 %} col-lg-6{% elif perline == 3 %} col-lg-4{% endif %}">
+    <div class="single_banner" style="background-color:{{instance.bg_color}}">
+        {% if instance.image %}
+            {% thumbnail instance.image "540x300" crop upscale as thumb %}
+            <img src="{{thumb.url}}" alt="" />
+        {% else %}
+        <img src="{% static 'dshop/shopwise/images/shop_banner_img1.jpg' %}" alt="" />
+        {% endif %}
+        <div class="single_banner_info" style="{% if instance.text_position == 0 %}left:10px;right:auto;{% else %}left:auto;right:0;{% endif %}">
+            <h5 class="single_bn_title1" style="color:{{instance.txt_color}}">{% if instance.text %}{{instance.text}}{% endif %}</h5>
+            <h3 class="single_bn_title" style="color:{{instance.txt_color}}">{% if instance.title %}{{instance.title}}{% endif %}</h3>
+            {% if instance.btn_label %}
+                <a href="{% if instance.btn_url %}{{instance.btn_url}}{% else %}#{% endif %}" class="single_bn_link" style="color:{{instance.txt_color}}">
+                    {{instance.btn_label}}
+                </a>
+            {% endif %}
+        </div>
     </div>
-  </div>
 </div>
