--- a/dshop/templates/theme/default/plugins/block-sales-parent.html
+++ b/dshop/templates/theme/default/plugins/block-sales-parent.html
@@ -1,27 +1,29 @@
 {% load static cms_tags %}
 
 <div class="section py-5">
-  <div class="container">
-    {% if instance.title or instance.text %}
-      <div class="row text-center">
-        <div class="col-12">
-          {% if instance.title %}
-            <h2 class="title">
-              {{instance.title}}
-            </h2>
-          {% endif %}
-          {% if instance.text %}
-            <div class="subtitle">
-              {{instance.text|safe}}
+    <div class="container">
+        {% if instance.title or instance.text %}
+            <div class="row text-center">
+                <div class="col-12">
+                    {% if instance.title %}
+                        <h2 class="title">
+                            {{instance.title}}
+                        </h2>
+                    {% endif %}
+                    {% if instance.text %}
+                        <div class="subtitle">
+                            {{instance.text|safe}}
+                        </div>
+                    {% endif %}
+                </div>
             </div>
-          {% endif %}
+        {% endif %}
+        <div class="row justify-content-evenly">
+            {% for plugin in instance.child_plugin_instances %}
+                {% with instance.perline as perline %}
+                    {% render_plugin plugin %}
+                {% endwith %}
+            {% endfor %}
         </div>
-      </div>
-    {% endif %}
-    <div class="row">
-      {% for plugin in instance.child_plugin_instances %}
-        {% render_plugin plugin %}
-      {% endfor %}
     </div>
-  </div>
 </div>
