--- a/apps/dmJobModule/templates/job_list.html
+++ b/apps/dmJobModule/templates/job_list.html
@@ -11,7 +11,7 @@
                 <div class="gaadiex-list">
                     {% for job in data %}
                         <div class="gaadiex-list-item">
-                             <h3><a href="/job/{{ job.id }}">{{ job.title }}</a></h3>
+                             <h3><a href="/job/{{ job.slug }}">{{ job.title }}</a></h3>
                              <h4>{{ job.location }}</h4>
                              <p>{{ job.description }}</p>
                          </div>
