--- a/dshop/templates/theme/default/pages/produits.html
+++ b/dshop/templates/theme/default/pages/produits.html
@@ -37,101 +37,147 @@
 {% endblock breadcrumb %}
 
 {% block main-content %}
-<div class="section pt-0">
-<div class="container">
-    <div class="row">
-	<!--<div class="{% if categories.count > 0 or brands.count > 0 %}col-lg-9{% else %}col-12{% endif %}">-->
-	<div class="col-12">
-	    <div class="row align-items-center mb-4 pb-1">
-		<div class="col-12">
-		    <div class="product_header">
-			<div class="product_header_left">
-			    <div class="custom_select">
-				<select id="dm-productlist-sortby" class="form-control form-control-sm">
-				    <option class="sb-default" value="default" disabled selected>{% trans "Sort by" %}</option>
-				    <option class="sb-date-new" value="date-new">{% trans "Date: Recent to Old" %}</option>
-				    <option class="sb-date-old"  value="date-old">{% trans "Date: Old to Recent" %}</option>
-				    <option class="sb-alpha-asc"  value="alpha-asc">{% trans "Name: A to Z" %}</option>
-				    <option class="sb-alpha-des"  value="alpha-des">{% trans "Name: Z to A" %}</option>
-				    <option class="sb-price-asc"  value="price-asc">{% trans "Price: Low to High" %}</option>
-				    <option class="sb-price-des"  value="price-des">{% trans "Price: High to Low" %}</option>
-				</select>
-			    </div>
-			    <div class="products_view">
-				<a href="javascript:Void(0);" class="shorting_icon grid active"><i class="ti-view-grid"></i></a>
-				<a href="javascript:Void(0);" class="shorting_icon list"><i class="ti-layout-list-thumb"></i></a>
-			    </div>
-			</div>
-			<div class="product_header_right">
-			    <div class="products-filters">
+    <div class="section pt-0">
+        <div class="container">
+            <div class="row">
+                <!--<div class="{% if categories.count > 0 or brands.count > 0 %}col-lg-9{% else %}col-12{% endif %}">-->
+                <div class="col-12">
+                    <div class="row align-items-center mb-4 pb-1">
+                        <div class="col-12">
+                            <div class="product_header">
+                                <div class="product_header_left">
+                                    <div class="custom_select">
+                                        <select id="dm-productlist-sortby" class="form-control form-control-sm">
+                                            <option class="sb-default" value="default" disabled selected>{% trans "Sort by" %}</option>
+                                            <option class="sb-date-new" value="date-new">{% trans "Date: Recent to Old" %}</option>
+                                            <option class="sb-date-old"  value="date-old">{% trans "Date: Old to Recent" %}</option>
+                                            <option class="sb-alpha-asc"  value="alpha-asc">{% trans "Name: A to Z" %}</option>
+                                            <option class="sb-alpha-des"  value="alpha-des">{% trans "Name: Z to A" %}</option>
+                                            <option class="sb-price-asc"  value="price-asc">{% trans "Price: Low to High" %}</option>
+                                            <option class="sb-price-des"  value="price-des">{% trans "Price: High to Low" %}</option>
+                                        </select>
                                     </div>
+                                    <div class="products_view">
+                                        <a href="javascript:Void(0);" class="shorting_icon grid active"><i class="ti-view-grid"></i></a>
+                                        <a href="javascript:Void(0);" class="shorting_icon list"><i class="ti-layout-list-thumb"></i></a>
+                                    </div>
+                                    <div class="dmfilters-mobile d-md-none">
+                                        <a href="#" onclick="toggleMenuFilteringMobile();return false;"><i class="ti-check-box"></i></a>
+                                    </div>
+                                </div>
+                                <div class="product_header_right">
+                                    <div class="products-filters"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-2">
-                            <ul><li>Brands</li></ul>
-                            <ul id='brands' style="list-style-type:none;">
-                                {% for brand in filter_data.brands %}
-                                    <li>
-                                        <input type="checkbox" id="brand_{{brand.id}}" name={{brand.id}} value={{brand.name}}>
-                                        <label for="filter-produits">{{ brand.name }}</label>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                            <ul><li>Categories</li></ul>
-                            <ul id='categories' style="list-style-type:none;">
-                                {% for cat in filter_data.categories %}
-                                    <li>
-                                        <input type="checkbox" id="category_{{cat.id}}" name={{cat.id}} value={{cat.name}}>
-                                        <label for="filter-produits">{{ cat.name }}</label>
-                                    </li>
-                                    <ul style="list-style-type:none;">
-                                        {% for val in cat.child %}
-                                            <li style="margin-left: 25px;">
-                                                <input type="checkbox" id="filter_{{val.id}}" name={{val.id}} value={{val.name}}>
-                                                <label>{{val.name}}</label>
+                        <div class="col-md-2 mb-5">
+                            <div class="dmfilters-list">
+                                {% if filter_data.brands|length > 0 %}
+                                    <h5>{% trans "Brands" %}</h5>
+                                    <ul id="brands">
+                                        {% for brand in filter_data.brands %}
+                                            <li>
+                                                <input type="checkbox" id="brand_{{brand.id}}" name="{{brand.id}}" value="{{e}}">
+                                                <label for="filter-produits">{{ brand.name }}</label>
                                             </li>
                                         {% endfor %}
                                     </ul>
-                                {% endfor %}
-                            </ul>
-                            <ul><li>Filters</li></ul>
-                            <ul id="filters"  style="list-style-type:none;">
-                                {% for filt, value in filter_data.filter.items %}
-                                    <li>
-                                        <input type="checkbox" id="filter_{{filt.id}}" name={{filt.id}} value={{filt.name}}>
-                                        <label for="filter-produits">{{ filt }}</label>
-                                    </li>
-                                    <ul style="list-style-type:none;">
-                                        {% for val in value.filter %}
-                                            <li style="margin-left: 25px;">
-                                                <input type="checkbox" id="filter_{{val.id}}" name={{val.id}} value={{val.name}}>
-                                                <label>{{val.name}}</label>
+                                {% endif %}
+                                {% if filter_data.categories|length > 0 %}
+                                    <h5>{% trans "Categories" %}</h5>
+                                    <ul id="categories">
+                                        {% for cat in filter_data.categories %}
+                                            <li>
+                                                <label for="category_{{cat.id}}">
+                                                    <input type="checkbox" id="category_{{cat.id}}" name="{{cat.id}}" value="{{cat.id}}">
+                                                    <span>{{ cat.name }}</span>
+                                                </label>
+                                                {% if cat.child|length > 0 %}
+                                                    <span class="toggle" onclick="toggleMenuFiltering(this)">+</span>
+                                                    <ul class="dmfilters-list-submenu">
+                                                        {% for val in cat.child %}
+                                                            <li>
+                                                                <label for="category_{{val.id}}">
+                                                                    <input type="checkbox" id="category_{{val.id}}" name="{{val.id}}" value="{{val.id}}">
+                                                                    <span>{{val.name}}</span>
+                                                                </label>
+                                                            </li>
+                                                        {% endfor %}
+                                                    </ul>
+                                                {% endif %}
                                             </li>
                                         {% endfor %}
                                     </ul>
-                                {% endfor %}
-                            </ul>
-                            <ul><li>Attributes</li></ul>
-                            <ul id="attribute"  style="list-style-type:none;">
-                                {% for attr, value in filter_data.attribute.items %}
-                                    <li>
-                                        <input type="checkbox" id="attribute_{{attr.id}}" name={{attr.id}} value={{attr.name}}>
-                                        <label for="attribute-produits">{{ attr }}</label>
-                                    </li>
-                                    <ul style="list-style-type:none;">
-                                        {% for val in value %}
-                                            <li style="margin-left: 25px;">
-                                                <input type="checkbox" id="attribute_{{val.id}}" name={{val.id}} value={{val.name}}>
-                                                <label>{{val.name}}</label>
+                                {% endif %}
+                                {% if filter_data.filter|length > 0 %}
+                                    <h5>{% trans "Filters" %}</h5>
+                                    <ul id="filters">
+                                        {% for filt, value in filter_data.filter.items %}
+                                            {% if value.id %}
+                                                <li>
+                                                    <label>
+                                                        <span>{{ filt }}</span>
+                                                    </label>
+                                                    {% if value.filter|length > 0 %}
+                                                        <span class="toggle" onclick="toggleMenuFiltering(this)">+</span>
+                                                        <ul class="dmfilters-list-submenu">
+                                                            {% for val in value.filter %}
+                                                                <li>
+                                                                    <label for="filter_{{val.id}}">
+                                                                        <input type="checkbox" id="filter_{{val.id}}" name="{{val.id}}" value="{{val.name}}" />
+                                                                        <span>{{val.name}}</span>
+                                                                    </label>
+                                                                </li>
+                                                            {% endfor %}
+                                                        </ul>
+                                                    {% endif %}
+                                                </li>
+                                            {% else %}
+                                                {% if value.filter|length > 0 %}
+                                                    {% for val in value.filter %}
+                                                        <li>
+                                                            <label for="filter_{{val.id}}">
+                                                                <input type="checkbox" id="filter_{{val.id}}" name="{{val.id}}" value="{{val.name}}" />
+                                                                <span>{{val.name}}</span>
+                                                            </label>
+                                                        </li>
+                                                    {% endfor %}
+                                                {% endif %}
+                                            {% endif %}
+                                        {% endfor %}
+                                    </ul>
+                                {% endif %}
+                                {% if filter_data.attribute|length > 0 %}
+                                    <h5>{% trans "Attributes" %}</h5>
+                                    <ul id="attribute">
+                                        {% for attr, value in filter_data.attribute.items %}
+                                            <li>
+                                                <label>
+                                                    <span>{{ attr }}</span>
+                                                </label>
+                                                {% if value.values|length > 0 %}
+                                                    <span class="toggle" onclick="toggleMenuFiltering(this)">+</span>
+                                                    <ul class="dmfilters-list-submenu">
+                                                        {% for val in value.values %}
+                                                            <li>
+                                                                <label for="attribute_{{val.id}}">
+                                                                    <input type="checkbox" id="attribute_{{val.id}}" name="{{val.id}}" value="{{val.name}}" />
+                                                                    <span>{{val.name}}</span>
+                                                                </label>
+                                                            </li>
+                                                        {% endfor %}
+                                                    </ul>
+                                                {% endif %}
                                             </li>
                                         {% endfor %}
                                     </ul>
-                                {% endfor %}
-                            </ul>
-                            <input type="button" value="submit" onclick="dmApplyFilter()">
+                                {% endif %}
+                                <div class="dmfilters-list-submit text-center text-md-left">
+                                    <button class="btn btn-fill-out btn-block" type="button" onclick="dmApplyFilter()">{% trans "Apply" %}</button>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-10 row shop_container grid produits">
                             {% for product in products %}
