--- a/dshop/templates/theme/default/plugins/bloc-slider-child.html
+++ b/dshop/templates/theme/default/plugins/bloc-slider-child.html
@@ -2,9 +2,9 @@
 
 {% if instance.image %}
   {% thumbnail instance.image "1920x500" crop upscale as thumb %}
-  <div class="carousel-item background_bg{% if loop %} active{% endif %}" data-img-src="{{thumb.url}}"{% if instance.bg_color %} style="background-color:{{instance.bg_color}};"{% endif %}>
+  <div class="carousel-item background_bg{% if loop %} active{% endif %}" data-img-src="{{thumb.url}}" style="{% if instance.bg_color %}background-color:{{instance.bg_color}};{% endif %}{% if height %}height:{{ height }}px;{% endif %}">
 {% else %}
-  <div class="carousel-item background_bg{% if loop %} active{% endif %}"{% if instance.bg_color %} style="background-color:{{instance.bg_color}};"{% endif %}>
+  <div class="carousel-item background_bg{% if loop %} active{% endif %}" style="{% if instance.bg_color %}background-color:{{instance.bg_color}};{% endif %}{% if height %}height:{{ height }}px;{% endif %}">
 {% endif %}
     <div class="banner_slide_content">
         <div class="container">
