--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -1142,3 +1142,12 @@ main > .container > .row {
     font-size: 66px;
     line-height: 100%;
 }
+
+.dmjob-applyform {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+    text-align: center;
+    padding: 40px 20px;
+    margin-bottom: 30px;
+}
